# SimpleBayesClassifier

./: CMakeLists.txt  README.md
src/: Likehood.cpp  Likelihood.h  Sample.cpp  Sample.h  Sample_Reader.cpp  Sample_Reader.h  Simple_Bayes_Classifier.cpp  Simple_Bayes_Classifier.h  global_config.h  main.cpp
